--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,10 @@
 ---
 ---
+@import "{{ site.theme }}";
+#footer_wrap {display: none;}
+#forkme_banner {display: none;}
+#downloads {display: none;}
+#whocares {haha: hehe;}
 #header-wrap {
   background: linear-gradient(to top, #376437, #216421);
-}
-
-@import "{{ site.theme }}";
-
-
+};
