--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,13 @@
               <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
             </section>
           {% endif %}
+          
+          <nav class="main-nav">
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="/blog.html">Blog</a></li>
+            </ul>
+          </nav>
         </header>
     </div>
 
