--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
           
           <nav class="main-nav">
             <ul>
-            {% for item in site.data.navidation %}
+            {% for item in site.data.navigation %}
               <li><a href="{{item.url}}" alt="{{item.title}}">{{item.title}}</a></li>
             {% endfor %}
             </ul>
